Stop re-computing compositing inputs for scrollers with sticky descendants.

This was added in revision 548120 because at the time paint
offset baked in sticky position. This was since fixed in revision
590578 that factored sticky position into a transform paint
property node rather than paint offset.

All that is required is to re-compute paint properties for the
scroller and all sticky descendants, in order to update the scroll
offset and sticky transform offset. The latter is accomplished
by a call to PLSA::InvalidatePaintForStickyDescendants() in
PLSA::InvalidatePaintForScrollOffsetChange().

Bug: 895109

Change-Id: Ied7ef8fd15db4f5c3d546f0f06f1adf3cf1e26c8
Reviewed-on: https://chromium-review.googlesource.com/c/1345031
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610305}
Former-commit-id: 25f5e3880294e41f2f0c23923b281dfb7f2dc237